UI in UV editor does not update immediately when a shortcut is assigning to Show Overlays #99343

Closed
opened 2022-07-02 17:24:15 +02:00 by Daniel Gryningstjerna · 4 comments

System Information
Operating system: Windows-10-10.0.16299-SP0 64 Bits
Graphics card: NVIDIA GeForce 940MX/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.11

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-07-01 08:11, hash: bb8953ab49
Worked: Since the option to assign shortcut to the show overlays was intructed in blender 3.0 it has never worked correctly to my knowledge.

Short description of error
Assigning a shortcut to Show Overlays in UV editorn does not immediately trigger a ui update for the icon and uv overlay when pressed, uv view need to be moved to update and the icon only update once the mousecursor is hovering over it.

Exact steps for others to reproduce the error
Enter the uv editor workspace
Rightclick on show overlay icon, assign shorcut, for example j since its unassignd by defult
Use the shortcut, notice that the overlay does not turn of if the uv grid is not movde since it does not update immedialty when the shortcut is pressed, also the icon for show overlays only updates once the mousecursor hovers over it.

Video of the issue:
Blender 2022-07-02 17_20_28.mp4

**System Information** Operating system: Windows-10-10.0.16299-SP0 64 Bits Graphics card: NVIDIA GeForce 940MX/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.11 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-07-01 08:11, hash: `bb8953ab49` Worked: Since the option to assign shortcut to the show overlays was intructed in blender 3.0 it has never worked correctly to my knowledge. **Short description of error** Assigning a shortcut to Show Overlays in UV editorn does not immediately trigger a ui update for the icon and uv overlay when pressed, uv view need to be moved to update and the icon only update once the mousecursor is hovering over it. **Exact steps for others to reproduce the error** Enter the uv editor workspace Rightclick on show overlay icon, assign shorcut, for example j since its unassignd by defult Use the shortcut, notice that the overlay does not turn of if the uv grid is not movde since it does not update immedialty when the shortcut is pressed, also the icon for show overlays only updates once the mousecursor hovers over it. Video of the issue: [Blender 2022-07-02 17_20_28.mp4](https://archive.blender.org/developer/F13249506/Blender_2022-07-02_17_20_28.mp4)

Added subscriber: @Dangry

Added subscriber: @Dangry

This issue was referenced by 82fc8786ea

This issue was referenced by 82fc8786ea182f0cdc9c2eedea53cbf3a3656e4d

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Siddhartha Jejurkar self-assigned this 2022-07-04 08:37:13 +02:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99343
No description provided.