Fix T99343: Missing RNA_def_property_update for show overlays in UV editor

Reviewed By: jbakker

Maniphest Tasks: T99343

Differential Revision: https://developer.blender.org/D15354